# FT_300s_ur3e

./: FT_300s_ur3e.rosinstall  LICENSE  README.md
Docker/: Dockerfile  build.sh  exec.sh  run.sh
Docker/ur_motion_range/data/: endeffector_pose.npy
Docker/ur_motion_range/scripts/: arm.py  move.py  plotting_2d.py  rviz_setup.py  tutorial.py
ft300s_description/: CMakeLists.txt  package.xml
ft300s_description/urdf/: robotiq_ft300s.urdf.xacro  robotiq_fts300s.urdf.xacro
fts300s_description/: CMakeLists.txt  package.xml
fts300s_description/urdf/: robotiq_fts300s.urdf.xacro
space_data/: data_plot.py  leftfinger_position.npy
ur3e_ft300s_gazebo/: CMakeLists.txt  package.xml
ur3e_ft300s_gazebo/launch/: ur_hande_ft300s.launch
ur3e_ft300s_gazebo/launch/inc/: load_ur_hande_ft300s.launch.xml
ur3e_ft300s_gazebo/models/dish/: model.sdf
ur3e_ft300s_gazebo/models/jig/: model.config
ur3e_fts300s_gazebo/: CMakeLists.txt  package.xml
ur3e_fts300s_gazebo/launch/: ur_hande_ft300.launch
ur3e_fts300s_gazebo/models/jig/: model.sdf
ur3e_fts300s_gazebo/models/workspace/: model.config  model.sdf
ur3e_fts300s_gazebo/worlds/: motion_range.world  test.world
ur_control_scr/: CMakeLists.txt  package.xml
ur_control_scr/scripts/: main.py  plotting_2d.py  rviz_setup.py
ur_control_scripts/scripts/: main.py  plotting_2d.py  real_main.py  rviz_setup.py  test.py  tutorial.py
ur_gazebo_motion_range/: CMakeLists.txt  package.xml
ur_gazebo_motion_range/launch/: ur_gripper_hande.launch  ur_hande_tf300.launch
ur_gazebo_motion_range/models/cafe_table/: model.sdf
ur_gazebo_motion_range/models/dish/: model.config
ur_gazebo_motion_range/models/dish/mesh/: dish.stl
ur_gazebo_motion_range/models/workspace/: model.sdf
ur_gazebo_motion_range/models/workspace/meshes/: workspace.stl
ur_gazebo_motion_range/worlds/: motion_range.world  test.world
ur_hande_ft300s_moveit_config/config/: joint_limits.yaml
ur_motion_range/: CMakeLists.txt  package.xml  setup.py
ur_motion_range/data/: endeffector_pose_wall.npy  plot_load_data.py
ur_motion_range/scripts/: move.py  rviz_setup.py  tutorial.py
(+14 files in other folders)
