<?xml version="1.0"?>

<package format="2">
  <name>fts300s_description</name>
  <version>0.1.0</version>
  <description>
    URDF description for robotiq FT 300-s.
    The model inspired on https://robotiq.com/support/ft-300-force-torque-sensor implementation of denso
    robot with robotiq TF sensor.
  </description>

  <author email="d1301539@gmail.com">Shumpe MORITA</author>
  <maintainer email="d1301539@gmail.com">Shunpei MORITA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_description</exec_depend>
  
  <export>
  </export>

</package>
